--- a/src/index.css
+++ b/src/index.css
@@ -440,7 +440,7 @@ li {
   display: flex;
   flex-flow: wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
 }
 
 @media screen and (max-width: 800px) {
