--- a/src/index.css
+++ b/src/index.css
@@ -862,3 +862,37 @@ input[type=range]:disabled::-moz-range-thumb {
   margin: 2.4rem 0 0.4rem;
   font-size: 1.4rem;
 }
+
+.ant-modal-mask,
+.ant-modal-wrap {
+  position: absolute;
+}
+
+.ant-modal-title {
+  margin: 2px;
+  font-size: 1.8rem;
+  line-height: 35px;
+  font-family: 'PT Sans Narrow', sans-serif;
+}
+
+.ant-modal-body {
+  font-size: 16px;
+}
+
+.instructions-wrapper {
+  display: flex;
+  align-items: baseline;
+  cursor: default;
+}
+
+.instructions-wrapper:hover {
+  cursor: pointer;
+}
+
+.instructions-label {
+  color: #1890ff;
+}
+
+.instructions-icon {
+  padding-left: 5px;
+}
