adding back in commented out code for nav bar hover

--- a/src/index.css
+++ b/src/index.css
@@ -212,7 +212,7 @@ li a {
   margin: 1rem 0 0.1rem;
   text-transform: uppercase;
   text-align: left;
-  /* margin-left: 97px;
+  /* margin-left: 97px;*/
 }
 
 .customLink {
